--- a/index.html
+++ b/index.html
@@ -5,77 +5,146 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Atul Prakash | Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            primary: '#1e40af', // Tailwind blue-900
+            accent: '#3b82f6',  // Tailwind blue-500
+          }
+        }
+      }
+    }
+  </script>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
-<body class="bg-gray-100 text-gray-800 font-sans">
-  <header class="bg-blue-900 text-white py-8 text-center shadow-md">
+<body class="bg-gray-50 text-gray-800 font-sans">
+
+  <!-- Header -->
+  <header class="bg-primary text-white py-8 text-center shadow-lg">
     <h1 class="text-4xl font-bold">Atul Prakash</h1>
-    <p class="text-lg mt-2">Final Year MCA Student | Developer | Researcher</p>
+    <p class="text-lg mt-2">Final Year MCA Student @ Tezpur University | Developer | Researcher</p>
   </header>
 
-  <nav class="bg-white shadow-md py-3 sticky top-0 z-10">
-    <div class="flex justify-center space-x-6 text-blue-800 font-medium">
-      <a href="#about" class="hover:text-blue-500">About</a>
-      <a href="#academics" class="hover:text-blue-500">Academics</a>
-      <a href="#projects" class="hover:text-blue-500">Projects</a>
-      <a href="#research" class="hover:text-blue-500">Research</a>
-      <a href="#contact" class="hover:text-blue-500">Contact</a>
+  <!-- Navbar -->
+  <nav class="bg-white sticky top-0 z-50 shadow-md py-3">
+    <div class="max-w-4xl mx-auto flex justify-center gap-6 font-medium text-primary">
+      <a href="#about" class="hover:text-accent">About</a>
+      <a href="#academics" class="hover:text-accent">Academics</a>
+      <a href="#projects" class="hover:text-accent">Projects</a>
+      <a href="#research" class="hover:text-accent">Research</a>
+      <a href="#skills" class="hover:text-accent">Skills</a>
+      <a href="#contact" class="hover:text-accent">Contact</a>
     </div>
   </nav>
 
-  <main class="max-w-4xl mx-auto px-4 py-10 space-y-16">
+  <main class="max-w-4xl mx-auto px-4 py-12 space-y-16">
+
     <!-- About -->
     <section id="about">
-      <h2 class="text-2xl font-bold text-blue-800 mb-4">About Me</h2>
+      <h2 class="text-3xl font-bold text-primary mb-4">About Me</h2>
       <p class="text-lg leading-relaxed">
-        I’m a software developer and researcher passionate about educational systems, recommender systems, and full-stack development.
-        I love building platforms that make learning smarter, faster, and fairer.
+        I’m a passionate software developer and researcher focused on building intelligent, user-centric educational systems.
+        From multi-tenant student platforms to adaptive quiz apps, I love designing tech that makes education smarter, faster, and more personal.
       </p>
     </section>
 
     <!-- Academics -->
     <section id="academics">
-      <h2 class="text-2xl font-bold text-blue-800 mb-4">Academic Excellence</h2>
-      <p class="text-lg leading-relaxed">
-        Currently pursuing a <strong>2-year MCA</strong> at <strong>Tezpur University</strong>.<br/>
-        <span class="block mt-2">🧠 <strong>Semester 1:</strong> 8.95 CGPA (Batch Topper)</span>
-        <span class="block">📈 <strong>Semester 2:</strong> 9.73 CGPA (Maintained Topper Position)</span>
-        <span class="block">🎯 <strong>Current Average:</strong> 9.35 CGPA</span>
-      </p>
+      <h2 class="text-3xl font-bold text-primary mb-4">Academic Excellence</h2>
+      <div class="bg-white shadow-md p-4 rounded-lg border-l-4 border-primary">
+        <p class="text-lg leading-relaxed">
+          🎓 <strong>MCA (2023–2025)</strong> — <strong>Tezpur University</strong><br/>
+          🧠 <strong>Semester 1:</strong> 8.95 CGPA (Batch Topper)<br/>
+          📈 <strong>Semester 2:</strong> 9.73 CGPA (Maintained Batch Topper Position)<br/>
+          🏆 <strong>Current Average:</strong> 9.35 CGPA
+        </p>
+      </div>
     </section>
 
     <!-- Projects -->
     <section id="projects">
-      <h2 class="text-2xl font-bold text-blue-800 mb-4">Projects</h2>
-      <ul class="list-disc pl-6 space-y-2 text-lg">
-        <li><strong>Student Monitoring System:</strong> Multi-tenant platform for universities to manage students, mentors, and dynamic profiles. Built with Django.</li>
-        <li><strong>Smart Quiz App:</strong> Quiz generator with filtering based on exams, subjects, topics, and time constraints.</li>
-        <li><strong>Flexible Profile Builder:</strong> Dynamic user profiles supporting various input types (text/image/audio).</li>
+      <h2 class="text-3xl font-bold text-primary mb-4">Projects</h2>
+      <ul class="space-y-4 text-lg">
+        <li class="bg-white p-4 rounded shadow-md border-l-4 border-accent">
+          <strong>Student Monitoring App (In Progress):</strong>
+          A role-based academic management system with multi-level form approval workflow. Includes dynamic forms, faculty verification, admin approvals, student tracking, secure login, batch handling, and notifications.
+        </li>
+        <li class="bg-white p-4 rounded shadow-md border-l-4 border-accent">
+          <strong>PYQs App (In Progress):</strong>
+          <a href="https://berealatul.github.io/PYQs/" target="_blank" class="text-accent underline">Live Preview</a> — Adaptive quiz platform for practicing previous year questions. Supports filtering by exam, subject, topic, and time. More features in development.
+        </li>
+        <li class="bg-white p-4 rounded shadow-md border-l-4 border-accent">
+          <strong>Pharmacy Management System:</strong>
+          A web-based inventory and billing solution designed for small pharmacy vendors. Helps manage medicines, stock alerts, billing with payment support, and customer records with a user-friendly interface.
+        </li>
       </ul>
     </section>
 
     <!-- Research -->
     <section id="research">
-      <h2 class="text-2xl font-bold text-blue-800 mb-4">Research</h2>
+      <h2 class="text-3xl font-bold text-primary mb-4">Research</h2>
       <p class="text-lg leading-relaxed">
-        Preparing a case study paper for the <strong>BEYOND 2025 Workshop at RecSys 2025</strong>, exploring personalization techniques in educational technologies, especially in adaptive quiz systems and student performance monitoring.
+        I’m preparing a case study paper for the <strong>BEYOND 2025 Workshop at RecSys 2025</strong>, focused on recommender systems.
       </p>
+    </section>
+
+    <!-- Skills -->
+    <section id="skills">
+      <h2 class="text-3xl font-bold text-primary mb-4">Skills & Certifications</h2>
+      <div class="space-y-4 text-lg">
+        <div>
+          <strong>Languages & Tools:</strong><br/>
+          Python, C, C++, Assembly, Git, MySQL, PHP (Learning), React (Learning), Django (Learning)
+        </div>
+        <div>
+          <strong>Core CS Topics:</strong><br/>
+          Data Structures, Algorithms, Databases
+        </div>
+        <div>
+          <strong>Certifications:</strong>
+          <ul class="list-disc pl-6">
+            <li>
+              <a href="https://certificates.cs50.io/93c5e14c-f284-4f53-be52-cfbfe838275f.pdf" target="_blank" class="text-accent hover:underline">
+                CS50's Introduction to Programming with Python – HarvardX
+              </a>
+            </li>
+            <li>
+              <a href="https://certificates.cs50.io/df3de021-756b-4e28-be3a-a85b6e2cf909.pdf" target="_blank" class="text-accent hover:underline">
+                CS50's Introduction to Databases with SQL – HarvardX
+              </a>
+            </li>
+            <li>
+              <a href="https://archive.nptel.ac.in/content/noc/NOC25/SEM1/Ecertificates/106/noc25-cs69/Course/NPTEL25CS69S105790019404451138.pdf" target="_blank" class="text-accent hover:underline">
+                The Joy of Computing using Python
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
 
     <!-- Contact -->
     <section id="contact">
-      <h2 class="text-2xl font-bold text-blue-800 mb-4">Contact</h2>
-      <p class="text-lg">📧 Email: <a href="mailto:berealatul@gmail.com" class="text-blue-600 hover:underline">berealatul@gmail.com</a></p>
+      <h2 class="text-3xl font-bold text-primary mb-4">Contact</h2>
+      <p class="text-lg">📧 Email: <a href="mailto:berealatul@gmail.com" class="text-accent hover:underline">berealatul@gmail.com</a></p>
       <div class="mt-4 space-y-2 text-lg">
-        <p>💻 GitHub: <a href="https://github.com/berealatul" target="_blank" class="text-blue-600 hover:underline">github.com/berealatul</a></p>
-        <p>🔗 LinkedIn: <a href="https://linkedin.com/in/berealatul" target="_blank" class="text-blue-600 hover:underline">linkedin.com/in/berealatul</a></p>
-        <p>🧠 LeetCode: <a href="https://leetcode.com/berealatul" target="_blank" class="text-blue-600 hover:underline">leetcode.com/berealatul</a></p>
-        <p>🌐 X/Twitter: <a href="https://twitter.com/berealatul" target="_blank" class="text-blue-600 hover:underline">twitter.com/berealatul</a></p>
+        <p>💻 GitHub: <a href="https://github.com/berealatul" target="_blank" class="text-accent hover:underline">github.com/berealatul</a></p>
+        <p>🔗 LinkedIn: <a href="https://linkedin.com/in/berealatul" target="_blank" class="text-accent hover:underline">linkedin.com/in/berealatul</a></p>
+        <p>🧠 LeetCode: <a href="https://leetcode.com/berealatul" target="_blank" class="text-accent hover:underline">leetcode.com/berealatul</a></p>
+        <p>🐦 Twitter: <a href="https://twitter.com/berealatul" target="_blank" class="text-accent hover:underline">twitter.com/berealatul</a></p>
       </div>
     </section>
   </main>
 
-  <footer class="bg-blue-900 text-white text-center py-4 mt-10">
+  <footer class="bg-primary text-white text-center py-4">
     <p>&copy; 2025 Atul Prakash. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
