Update About section and add experience details

--- a/index.html
+++ b/index.html
@@ -45,102 +45,114 @@
 
   <main class="max-w-4xl mx-auto px-4 py-12 space-y-16">
 
-    <!-- About -->
-    <section id="about">
-      <h2 class="text-3xl font-bold text-primary mb-4">About Me</h2>
-      <p class="text-lg leading-relaxed">
-        I’m a passionate software developer and researcher focused on building intelligent, user-centric educational systems.
-        From multi-tenant student platforms to adaptive quiz apps, I love designing tech that makes education smarter, faster, and more personal.
-      </p>
-    </section>
+  <!-- About -->
+  <section id="about">
+    <h2 class="text-3xl font-bold text-primary mb-4">About Me</h2>
+    <p class="text-lg leading-relaxed">
+      Final Year MCA student at <strong>Tezpur University (CGPA: 9.14)</strong> with hands-on experience 
+      building production-grade systems using cloud infrastructure and scalable backend architectures. 
+      Currently working on AI-driven educational platforms and cloud-deployed enterprise systems.
+    </p>
+  </section>
 
-    <!-- Academics -->
-    <section id="academics">
-      <h2 class="text-3xl font-bold text-primary mb-4">Academic Excellence</h2>
-      <div class="bg-white shadow-md p-4 rounded-lg border-l-4 border-primary">
-        <p class="text-lg leading-relaxed">
-          🎓 <strong>MCA (2024–2026)</strong> — <strong>Tezpur University</strong><br/>
-          🧠 <strong>Semester 1:</strong> 8.95 CGPA (Batch Topper)<br/>
-          📈 <strong>Semester 2:</strong> 9.73 CGPA (Maintained Batch Topper Position)<br/>
-          🏆 <strong>Current Average:</strong> 9.35 CGPA
-        </p>
+  <!-- Experience -->
+  <section id="experience">
+    <h2 class="text-3xl font-bold text-primary mb-4">Experience</h2>
+
+    <div class="space-y-4 text-lg">
+
+      <div class="bg-white p-4 rounded shadow-md border-l-4 border-accent">
+        <strong>Software Development Intern — CuriousMentor</strong><br/>
+        Built a scalable test paper generation platform using 
+        <strong>Java, SpringBoot, Next.js, and MySQL</strong>. 
+        Designed REST APIs and implemented optimized database workflows.
       </div>
-    </section>
 
-    <!-- Projects -->
-    <section id="projects">
-      <h2 class="text-3xl font-bold text-primary mb-4">Projects</h2>
-      <ul class="space-y-4 text-lg">
-        <li class="bg-white p-4 rounded shadow-md border-l-4 border-accent">
-          <strong>Student Monitoring App (In Progress):</strong>
-          A role-based academic management system with multi-level form approval workflow. Includes dynamic forms, faculty verification, admin approvals, student tracking, secure login, batch handling, and notifications.
-        </li>
-        <li class="bg-white p-4 rounded shadow-md border-l-4 border-accent">
-          <strong>PYQs App (In Progress):</strong>
-          <a href="https://berealatul.github.io/PYQs/" target="_blank" class="text-accent underline">Live Preview</a> — Adaptive quiz platform for practicing previous year questions. Supports filtering by exam, subject, topic, and time. More features in development.
-        </li>
-        <li class="bg-white p-4 rounded shadow-md border-l-4 border-accent">
-          <strong>Pharmacy Management System:</strong>
-          A web-based inventory and billing solution designed for small pharmacy vendors. Helps manage medicines, stock alerts, billing with payment support, and customer records with a user-friendly interface.
-        </li>
-      </ul>
-    </section>
-
-    <!-- Research -->
-    <section id="research">
-      <h2 class="text-3xl font-bold text-primary mb-4">Research</h2>
-      <p class="text-lg leading-relaxed">
-        I’m preparing a case study paper for the <strong>BEYOND 2025 Workshop at RecSys 2025</strong>, focused on recommender systems.
-      </p>
-    </section>
-
-    <!-- Skills -->
-    <section id="skills">
-      <h2 class="text-3xl font-bold text-primary mb-4">Skills & Certifications</h2>
-      <div class="space-y-4 text-lg">
-        <div>
-          <strong>Languages & Tools:</strong><br/>
-          Python, C, C++, Assembly, Git, MySQL, PHP (Learning), React (Learning), Django (Learning)
-        </div>
-        <div>
-          <strong>Core CS Topics:</strong><br/>
-          Data Structures, Algorithms, Databases
-        </div>
-        <div>
-          <strong>Certifications:</strong>
-          <ul class="list-disc pl-6">
-            <li>
-              <a href="https://certificates.cs50.io/93c5e14c-f284-4f53-be52-cfbfe838275f.pdf" target="_blank" class="text-accent hover:underline">
-                CS50's Introduction to Programming with Python – HarvardX
-              </a>
-            </li>
-            <li>
-              <a href="https://certificates.cs50.io/df3de021-756b-4e28-be3a-a85b6e2cf909.pdf" target="_blank" class="text-accent hover:underline">
-                CS50's Introduction to Databases with SQL – HarvardX
-              </a>
-            </li>
-            <li>
-              <a href="https://archive.nptel.ac.in/content/noc/NOC25/SEM1/Ecertificates/106/noc25-cs69/Course/NPTEL25CS69S105790019404451138.pdf" target="_blank" class="text-accent hover:underline">
-                The Joy of Computing using Python
-              </a>
-            </li>
-          </ul>
-        </div>
+      <div class="bg-white p-4 rounded shadow-md border-l-4 border-accent">
+        <strong>Software Development Intern — IIT Ropar (Vibe Platform)</strong><br/>
+        Working on AI-powered collaboration features using the 
+        <strong>MERN Stack (MongoDB, Express, React, Node.js)</strong>. 
+        Contributing to backend workflows and intelligent content systems.
       </div>
-    </section>
 
-    <!-- Contact -->
-    <section id="contact">
-      <h2 class="text-3xl font-bold text-primary mb-4">Contact</h2>
-      <p class="text-lg">📧 Email: <a href="mailto:berealatul@gmail.com" class="text-accent hover:underline">berealatul@gmail.com</a></p>
-      <div class="mt-4 space-y-2 text-lg">
-        <p>💻 GitHub: <a href="https://github.com/berealatul" target="_blank" class="text-accent hover:underline">github.com/berealatul</a></p>
-        <p>🔗 LinkedIn: <a href="https://linkedin.com/in/berealatul" target="_blank" class="text-accent hover:underline">linkedin.com/in/berealatul</a></p>
-        <p>🧠 LeetCode: <a href="https://leetcode.com/berealatul" target="_blank" class="text-accent hover:underline">leetcode.com/berealatul</a></p>
-        <p>🐦 Twitter: <a href="https://twitter.com/berealatul" target="_blank" class="text-accent hover:underline">twitter.com/berealatul</a></p>
+    </div>
+  </section>
+
+  <!-- Projects -->
+  <section id="projects">
+    <h2 class="text-3xl font-bold text-primary mb-4">Projects</h2>
+    <ul class="space-y-4 text-lg">
+
+      <li class="bg-white p-4 rounded shadow-md border-l-4 border-accent">
+        <strong>NBA Accreditation Management System:</strong>
+        Cloud-deployed university platform built with <strong>React + PHP + MySQL</strong>. 
+        Hosted on <strong>AWS EC2</strong> with <strong>Amazon RDS (MySQL)</strong> and 
+        <strong>AWS S3</strong> for document storage. Implemented RBAC and scalable workflows.
+      </li>
+
+      <li class="bg-white p-4 rounded shadow-md border-l-4 border-accent">
+        <strong>NPTEL Attendance Autofill (Edge Extension):</strong>
+        Published Microsoft Edge extension automating attendance using 
+        <strong>JavaScript, DOM APIs, Manifest V3</strong>. Reduced manual input by 90%.
+      </li>
+
+      <li class="bg-white p-4 rounded shadow-md border-l-4 border-accent">
+        <strong>Pharmacy Management System:</strong>
+        SaaS ERP built with <strong>React, Django, MySQL</strong>. 
+        Includes inventory tracking, billing workflows, and JWT-based authentication.
+      </li>
+
+    </ul>
+  </section>
+
+  <!-- Skills -->
+  <section id="skills">
+    <h2 class="text-3xl font-bold text-primary mb-4">Technical Skills</h2>
+    <div class="space-y-3 text-lg">
+      <div>
+        <strong>Languages:</strong> Java, Python, C/C++, JavaScript, PHP
       </div>
-    </section>
-  </main>
+      <div>
+        <strong>Frameworks:</strong> SpringBoot, React, Next.js, Django, Express
+      </div>
+      <div>
+        <strong>Databases:</strong> MySQL, MongoDB (RDS Experience)
+      </div>
+      <div>
+        <strong>Cloud & Tools:</strong> AWS EC2, Amazon RDS, AWS S3, Git, Linux, Postman
+      </div>
+      <div>
+        <strong>Core CS:</strong> Data Structures, Algorithms, DBMS, System Design Basics
+      </div>
+    </div>
+  </section>
+
+  <!-- Certifications -->
+  <section id="certifications">
+    <h2 class="text-3xl font-bold text-primary mb-4">Certifications</h2>
+    <ul class="list-disc pl-6 text-lg space-y-2">
+      <li>UGC NET Qualified (Jan 2026)</li>
+      <li>CS50 – Introduction to Programming with Python (Harvard)</li>
+      <li>CS50 – Introduction to Databases with SQL (Harvard)</li>
+    </ul>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact">
+    <h2 class="text-3xl font-bold text-primary mb-4">Contact</h2>
+    <p class="text-lg">
+      📧 <a href="mailto:berealatul@gmail.com" class="text-accent hover:underline">
+      berealatul@gmail.com</a>
+    </p>
+    <div class="mt-3 space-y-2 text-lg">
+      <p>💻 <a href="https://github.com/berealatul" target="_blank" class="text-accent hover:underline">GitHub</a></p>
+      <p>🔗 <a href="https://linkedin.com/in/berealatul" target="_blank" class="text-accent hover:underline">LinkedIn</a></p>
+      <p>🧠 <a href="https://leetcode.com/berealatul" target="_blank" class="text-accent hover:underline">LeetCode</a></p>
+    </div>
+  </section>
+
+</main>
+
 
   <footer class="bg-primary text-white text-center py-4">
     <p>&copy; 2025 Atul Prakash. All rights reserved.</p>
